kubernetes/apps/selfhosted/actual-budget/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: actual-budget
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: actual-budget
  ingress:
    # Allow ingress from actual-ai & API service
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: actual-ai
            k8s:io.kubernetes.pod.namespace: selfhosted
        - matchLabels:
            app.kubernetes.io/name: actual-api
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "5006"
              protocol: TCP
